--- a/homework02.ipynb
+++ b/homework02.ipynb
@@ -421,7 +421,7 @@
    "outputs": [],
    "source": [
     "samples = data.copy()\n",
-    "classifications = samples.pop('quality')"
+    "qualities = samples.pop('quality')"
    ],
    "metadata": {
     "collapsed": false,
@@ -456,7 +456,7 @@
     }
    ],
    "source": [
-    "classifications.value_counts()"
+    "qualities.value_counts()"
    ],
    "metadata": {
     "collapsed": false,
@@ -471,7 +471,7 @@
    "outputs": [],
    "source": [
     "oversample = SMOTE()\n",
-    "samples, classifications = oversample.fit_resample(samples, classifications)"
+    "samples, qualities = oversample.fit_resample(samples, qualities)"
    ],
    "metadata": {
     "collapsed": false,
@@ -494,7 +494,7 @@
     }
    ],
    "source": [
-    "classifications.value_counts()"
+    "qualities.value_counts()"
    ],
    "metadata": {
     "collapsed": false,
@@ -520,7 +520,7 @@
    "execution_count": 180,
    "outputs": [],
    "source": [
-    "samples_train, samples_test, classifications_train, classifications_test = train_test_split(samples, classifications, test_size=0.3, random_state=0)"
+    "samples_train, samples_test, qualities_train, qualities_test = train_test_split(samples, qualities, test_size=0.3, random_state=0)"
    ],
    "metadata": {
     "collapsed": false,
@@ -568,7 +568,7 @@
    ],
    "source": [
     "attr_count = len(samples.keys())\n",
-    "class_count = len(classifications.value_counts())\n",
+    "class_count = len(qualities.value_counts())\n",
     "print(attr_count, class_count)"
    ]
   },
@@ -588,7 +588,7 @@
    "outputs": [],
    "source": [
     "model = build_model(attr_count, class_count)\n",
-    "history = model.fit(samples_train, classifications_train, validation_data=(samples_test, classifications_test), shuffle=False, epochs=3000, verbose=0)"
+    "history = model.fit(samples_train, qualities_train, validation_data=(samples_test, qualities_test), shuffle=False, epochs=3000, verbose=0)"
    ],
    "metadata": {
     "collapsed": false,
