--- a/homework02.ipynb
+++ b/homework02.ipynb
@@ -553,22 +553,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 235,
    "id": "58282418-e192-4767-833c-4d568a1dba2d",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "11 6\n"
+     "ename": "NameError",
+     "evalue": "name 'qualities' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "\u001B[1;32m~\\AppData\\Local\\Temp/ipykernel_6436/2330741545.py\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[0;32m      1\u001B[0m \u001B[0mattr_count\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mlen\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0msamples\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mkeys\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m----> 2\u001B[1;33m \u001B[0mprint\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mattr_count\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mlen\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mqualities\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mvalue_counts\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m",
+      "\u001B[1;31mNameError\u001B[0m: name 'qualities' is not defined"
      ]
     }
    ],
    "source": [
     "attr_count = len(samples.keys())\n",
-    "class_count = len(qualities.value_counts())\n",
-    "print(attr_count, class_count)"
+    "print(attr_count, len(qualities.value_counts()))"
    ]
   },
   {
@@ -586,7 +589,7 @@
    "execution_count": 225,
    "outputs": [],
    "source": [
-    "model = build_model(attr_count, class_count)\n",
+    "model = build_model(attr_count, 1)\n",
     "history = model.fit(samples_train, qualities_train, validation_data=(samples_test, qualities_test), shuffle=False, epochs=3000, verbose=0)"
    ],
    "metadata": {
