--- a/homework02.ipynb
+++ b/homework02.ipynb
@@ -418,7 +418,7 @@
    "id": "cf39b040",
    "metadata": {},
    "source": [
-    "Te ir redzams, ka \"alcohol\" ietekmē kvalitāti visvairāk, tātad tas ir svārīgs parametrs. Vēl alkohols korelē ar blīvumu (density), tas nozīmē, ka varam atstāt tikai vienu. Ja būs problēmas ar precizitāti - varbūt noņemšu tos."
+    "Te ir redzams, ka \"alcohol\" ietekmē kvalitāti visvairāk, tātad tas ir svārīgs parametrs. Bet vēl ir līdzīgi parametri tādi kā \"free sulfur dioxide\" in \"total sulfur dioxide\". Izskatas, ka viens ietilpst otrā."
    ]
   },
   {
@@ -450,7 +450,6 @@
    "source": [
     "samples = data.copy()\n",
     "samples.pop('free sulfur dioxide')\n",
-    "samples.pop('density')\n",
     "qualities = samples.pop('quality')"
    ]
   },
@@ -606,7 +605,7 @@
    "id": "0d6849e2",
    "metadata": {},
    "source": [
-    "Mums ir 9 atribūti un 7 klases, jo nav datu priekš citām klasēm.\n",
+    "Mums ir 10 atribūti un 7 klases, jo nav datu priekš citām klasēm.\n",
     "Tagad uzbūvēsim modeli un trenēsim to:"
    ]
   },
