--- a/homework02.ipynb
+++ b/homework02.ipynb
@@ -98,7 +98,7 @@
    "source": [
     "SEED = 11\n",
     "EPOCHS = 1000\n",
-    "BATCH_SIZE = 32\n",
+    "BATCH_SIZE = 16\n",
     "TF_DEVICE = '/gpu:0' if gpus else '/cpu:0'"
    ],
    "metadata": {
@@ -662,7 +662,7 @@
     "        tf.keras.layers.Dense(1, bias_initializer=binit)\n",
     "    ])\n",
     "\n",
-    "    optimizer = tf.keras.optimizers.Adam(learning_rate=0.0001)\n",
+    "    optimizer = tf.keras.optimizers.SGD(learning_rate=0.0001, nesterov=True)\n",
     "\n",
     "    model.compile(loss='mae', optimizer=optimizer, metrics=[metric])\n",
     "\n",
@@ -739,7 +739,7 @@
     "        tf.keras.layers.Dense(1, bias_initializer=binit)\n",
     "    ])\n",
     "\n",
-    "    optimizer = tf.keras.optimizers.Adam(learning_rate=0.001)\n",
+    "    optimizer = tf.keras.optimizers.SGD(learning_rate=0.001, nesterov=True)\n",
     "\n",
     "    model.compile(loss='mae', optimizer=optimizer, metrics=[metric])\n",
     "\n",
@@ -862,7 +862,7 @@
     "        tf.keras.layers.Dense(1, bias_initializer=binit)\n",
     "    ])\n",
     "\n",
-    "    optimizer = tf.keras.optimizers.Adam(learning_rate=0.001)\n",
+    "    optimizer = tf.keras.optimizers.SGD(learning_rate=0.001, nesterov=True)\n",
     "\n",
     "    model.compile(loss='mae', optimizer=optimizer, metrics=[metric])\n",
     "\n",
@@ -938,7 +938,7 @@
     "        tf.keras.layers.Dense(1, bias_initializer=binit)\n",
     "    ])\n",
     "\n",
-    "    optimizer = tf.keras.optimizers.Adam(learning_rate=0.001)\n",
+    "    optimizer = tf.keras.optimizers.SGD(learning_rate=0.001, nesterov=True)\n",
     "\n",
     "    model.compile(loss='mae', optimizer=optimizer, metrics=[metric])\n",
     "\n",
@@ -1012,7 +1012,7 @@
     "        tf.keras.layers.Dense(1, bias_initializer=binit)\n",
     "    ])\n",
     "\n",
-    "    optimizer = tf.keras.optimizers.Adam(learning_rate=0.005)\n",
+    "    optimizer = tf.keras.optimizers.SGD(learning_rate=0.005, nesterov=True)\n",
     "\n",
     "    model.compile(loss='mae', optimizer=optimizer, metrics=[metric])\n",
     "\n",
@@ -1086,7 +1086,7 @@
     "        tf.keras.layers.Dense(1, bias_initializer=binit)\n",
     "    ])\n",
     "\n",
-    "    optimizer = tf.keras.optimizers.Adam(learning_rate=0.005)\n",
+    "    optimizer = tf.keras.optimizers.SGD(learning_rate=0.005, nesterov=True)\n",
     "\n",
     "    model.compile(loss='mae', optimizer=optimizer, metrics=[metric])\n",
     "\n",
@@ -1161,7 +1161,7 @@
     "        tf.keras.layers.Dense(1, bias_initializer=binit)\n",
     "    ])\n",
     "\n",
-    "    optimizer = tf.keras.optimizers.Adam(learning_rate=0.1)\n",
+    "    optimizer = tf.keras.optimizers.SGD(learning_rate=0.1, nesterov=True)\n",
     "\n",
     "    model.compile(loss='mae', optimizer=optimizer, metrics=[metric])\n",
     "\n",
