--- a/homework02.ipynb
+++ b/homework02.ipynb
@@ -833,7 +833,7 @@
     "    model = tf.keras.models.Sequential([\n",
     "        tf.keras.layers.Input(input_count),\n",
     "        tf.keras.layers.Dense(1, kernel_initializer=kinit, bias_initializer=binit, activation='relu'),\n",
-    "        tf.keras.layers.Dense(1, bias_initializer=binit)\n",
+    "        tf.keras.layers.Dense(1, kernel_initializer=kinit, bias_initializer=binit)\n",
     "    ])\n",
     "\n",
     "    optimizer = tf.keras.optimizers.Adadelta(learning_rate=0.001)\n",
@@ -887,7 +887,7 @@
     "    model = tf.keras.models.Sequential([\n",
     "        tf.keras.layers.Input(input_count),\n",
     "        tf.keras.layers.Dense(2, kernel_initializer=kinit, bias_initializer=binit, activation='relu'),\n",
-    "        tf.keras.layers.Dense(1, bias_initializer=binit)\n",
+    "        tf.keras.layers.Dense(1, kernel_initializer=kinit, bias_initializer=binit)\n",
     "    ])\n",
     "\n",
     "    optimizer = tf.keras.optimizers.Adadelta(learning_rate=0.001)\n",
@@ -941,7 +941,7 @@
     "    model = tf.keras.models.Sequential([\n",
     "        tf.keras.layers.Input(input_count),\n",
     "        tf.keras.layers.Dense(2, kernel_initializer=kinit, bias_initializer=binit, activation='relu'),\n",
-    "        tf.keras.layers.Dense(1, bias_initializer=binit)\n",
+    "        tf.keras.layers.Dense(1, kernel_initializer=kinit, bias_initializer=binit)\n",
     "    ])\n",
     "\n",
     "    optimizer = tf.keras.optimizers.Adadelta(learning_rate=0.005)\n",
@@ -995,7 +995,7 @@
     "    model = tf.keras.models.Sequential([\n",
     "        tf.keras.layers.Input(input_count),\n",
     "        tf.keras.layers.Dense(8, kernel_initializer=kinit, bias_initializer=binit, activation='relu'),\n",
-    "        tf.keras.layers.Dense(1, bias_initializer=binit)\n",
+    "        tf.keras.layers.Dense(1, kernel_initializer=kinit, bias_initializer=binit)\n",
     "    ])\n",
     "\n",
     "    optimizer = tf.keras.optimizers.Adadelta(learning_rate=0.005)\n",
@@ -1049,7 +1049,7 @@
     "    model = tf.keras.models.Sequential([\n",
     "        tf.keras.layers.Input(input_count),\n",
     "        tf.keras.layers.Dense(8, kernel_initializer=kinit, bias_initializer=binit, activation='relu'),\n",
-    "        tf.keras.layers.Dense(1, bias_initializer=binit)\n",
+    "        tf.keras.layers.Dense(1, kernel_initializer=kinit, bias_initializer=binit)\n",
     "    ])\n",
     "\n",
     "    optimizer = tf.keras.optimizers.Adadelta(learning_rate=0.1)\n",
