--- a/homework02.ipynb
+++ b/homework02.ipynb
@@ -713,7 +713,9 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [],
+   "source": [
+    "BATCH_SIZE = 4096"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -791,7 +793,7 @@
    "source": [
     "%%time\n",
     "model = build_model(attr_count)\n",
-    "evaluate_model(model, samples, qualities, batch_size=4096, epochs=EPOCHS*2)"
+    "evaluate_model(model, samples, qualities, batch_size=BATCH_SIZE, epochs=EPOCHS*2)"
    ]
   },
   {
@@ -857,7 +859,7 @@
    "source": [
     "%%time\n",
     "model = build_model(attr_count)\n",
-    "evaluate_model(model, samples, qualities, batch_size=1000, epochs=EPOCHS*2)"
+    "evaluate_model(model, samples, qualities, batch_size=BATCH_SIZE, epochs=EPOCHS*2)"
    ],
    "metadata": {
     "collapsed": false,
@@ -960,7 +962,7 @@
    "source": [
     "%%time\n",
     "model = build_model(attr_count)\n",
-    "evaluate_model(model, samples, qualities, epochs=EPOCHS*2)"
+    "evaluate_model(model, samples, qualities, batch_size=BATCH_SIZE, epochs=EPOCHS*2)"
    ],
    "metadata": {
     "collapsed": false,
@@ -1034,7 +1036,7 @@
    "source": [
     "%%time\n",
     "model = build_model(attr_count)\n",
-    "evaluate_model(model, samples, qualities, epochs=EPOCHS*2)"
+    "evaluate_model(model, samples, qualities, batch_size=BATCH_SIZE, epochs=EPOCHS*2)"
    ],
    "metadata": {
     "collapsed": false,
@@ -1087,7 +1089,7 @@
    "source": [
     "%%time\n",
     "model = build_model(attr_count)\n",
-    "evaluate_model(model, samples, qualities, epochs=EPOCHS*2)"
+    "evaluate_model(model, samples, qualities, batch_size=BATCH_SIZE, epochs=EPOCHS*2)"
    ],
    "metadata": {
     "collapsed": false,
@@ -1141,7 +1143,7 @@
    "source": [
     "%%time\n",
     "model = build_model(attr_count)\n",
-    "evaluate_model(model, samples, qualities, epochs=EPOCHS*2)"
+    "evaluate_model(model, samples, qualities, batch_size=BATCH_SIZE, epochs=EPOCHS*2)"
    ],
    "metadata": {
     "collapsed": false,
@@ -1195,7 +1197,7 @@
    "source": [
     "%%time\n",
     "model = build_model(attr_count)\n",
-    "evaluate_model(model, samples, qualities, epochs=EPOCHS*2)"
+    "evaluate_model(model, samples, qualities, batch_size=BATCH_SIZE, epochs=EPOCHS*2)"
    ],
    "metadata": {
     "collapsed": false,
@@ -1249,7 +1251,7 @@
    "source": [
     "%%time\n",
     "model = build_model(attr_count)\n",
-    "evaluate_model(model, samples, qualities, epochs=EPOCHS*2)"
+    "evaluate_model(model, samples, qualities, batch_size=BATCH_SIZE, epochs=EPOCHS*2)"
    ],
    "metadata": {
     "collapsed": false,
@@ -1294,37 +1296,7 @@
    "source": [
     "%%time\n",
     "model = build_model(attr_count)\n",
-    "evaluate_model(model, samples, qualities, epochs=EPOCHS*10)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "model = build_model(attr_count)\n",
-    "evaluate_model(model, samples, qualities, epochs=EPOCHS*2)"
+    "evaluate_model(model, samples, qualities, batch_size=BATCH_SIZE, epochs=EPOCHS*10)"
    ],
    "metadata": {
     "collapsed": false,
