--- a/homework02.ipynb
+++ b/homework02.ipynb
@@ -612,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 45,
    "outputs": [],
    "source": [
     "def plot_history(history, metric='mae'):\n",
@@ -643,10 +643,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 46,
    "outputs": [],
    "source": [
-    "def evaluate_model(model, samples, qualities, epochs=100, batch_size=BATCH_SIZE, metric='mse'):\n",
+    "def evaluate_model(model, samples, qualities, epochs=100, batch_size=BATCH_SIZE, metric='mae'):\n",
     "    samples_train, samples_test, qualities_train, qualities_test = train_test_split(samples, qualities, test_size=0.2,\n",
     "                                                                                    random_state=SEED)\n",
     "\n",
@@ -677,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 47,
    "outputs": [],
    "source": [
     "def build_model(input_count: int, metric='mae'):\n",
@@ -701,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 48,
    "outputs": [],
    "source": [
     "BATCH_SIZE = 4"
