--- a/homework02.ipynb
+++ b/homework02.ipynb
@@ -693,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 77,
    "outputs": [],
    "source": [
     "def build_model(input_count: int):\n",
@@ -701,28 +701,17 @@
     "    binit = tf.keras.initializers.Zeros()\n",
     "    model = tf.keras.models.Sequential([\n",
     "        tf.keras.layers.Input(input_count),\n",
-    "        tf.keras.layers.Dense(input_count*2, kernel_initializer=kinit, bias_initializer=binit, activation='relu'),\n",
-    "        tf.keras.layers.Dense(input_count*2, kernel_initializer=kinit, bias_initializer=binit, activation='relu'),\n",
-    "        tf.keras.layers.Dense(input_count*2, kernel_initializer=kinit, bias_initializer=binit, activation='relu'),\n",
-    "        tf.keras.layers.Dense(input_count*2, kernel_initializer=kinit, bias_initializer=binit, activation='relu'),\n",
-    "        tf.keras.layers.Dense(input_count*2, kernel_initializer=kinit, bias_initializer=binit, activation='relu'),\n",
-    "        tf.keras.layers.Dense(input_count*2, kernel_initializer=kinit, bias_initializer=binit, activation='relu'),\n",
-    "        tf.keras.layers.Dense(input_count*2, kernel_initializer=kinit, bias_initializer=binit, activation='relu'),\n",
-    "        tf.keras.layers.Dense(input_count*2, kernel_initializer=kinit, bias_initializer=binit, activation='relu'),\n",
-    "        tf.keras.layers.Dense(input_count*2, kernel_initializer=kinit, bias_initializer=binit, activation='relu'),\n",
-    "        tf.keras.layers.Dense(input_count*2, kernel_initializer=kinit, bias_initializer=binit, activation='relu'),\n",
-    "        tf.keras.layers.Dense(input_count*2, kernel_initializer=kinit, bias_initializer=binit, activation='relu'),\n",
-    "        tf.keras.layers.Dense(input_count*2, kernel_initializer=kinit, bias_initializer=binit, activation='relu'),\n",
-    "        tf.keras.layers.Dense(input_count*2, kernel_initializer=kinit, bias_initializer=binit, activation='relu'),\n",
-    "        tf.keras.layers.Dense(input_count*2, kernel_initializer=kinit, bias_initializer=binit, activation='relu'),\n",
-    "        tf.keras.layers.Dense(input_count*2, kernel_initializer=kinit, bias_initializer=binit, activation='relu'),\n",
-    "        tf.keras.layers.Dense(input_count*2, kernel_initializer=kinit, bias_initializer=binit, activation='relu'),\n",
-    "        tf.keras.layers.Dense(input_count*2, kernel_initializer=kinit, bias_initializer=binit, activation='relu'),\n",
-    "        tf.keras.layers.Dense(input_count*2, kernel_initializer=kinit, bias_initializer=binit, activation='relu'),\n",
+    "        tf.keras.layers.Dense(input_count**2, kernel_initializer=kinit, bias_initializer=binit, activation='relu'),\n",
+    "        tf.keras.layers.Dense(input_count**2, kernel_initializer=kinit, bias_initializer=binit, activation='relu'),\n",
+    "        tf.keras.layers.Dense(input_count**2, kernel_initializer=kinit, bias_initializer=binit, activation='relu'),\n",
+    "        tf.keras.layers.Dense(input_count**2, kernel_initializer=kinit, bias_initializer=binit, activation='relu'),\n",
+    "        tf.keras.layers.Dense(input_count**2, kernel_initializer=kinit, bias_initializer=binit, activation='relu'),\n",
+    "        tf.keras.layers.Dense(input_count**2, kernel_initializer=kinit, bias_initializer=binit, activation='relu'),\n",
+    "        tf.keras.layers.Dense(input_count**2, kernel_initializer=kinit, bias_initializer=binit, activation='relu'),\n",
     "        tf.keras.layers.Dense(1)\n",
     "    ])\n",
     "\n",
-    "    optimizer = tf.keras.optimizers.Adadelta(learning_rate=0.3)\n",
+    "    optimizer = tf.keras.optimizers.Adadelta(learning_rate=0.66)\n",
     "\n",
     "    model.compile(loss='mse', optimizer=optimizer)\n",
     "\n",
@@ -737,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 78,
    "outputs": [],
    "source": [
     "# %%time\n",
@@ -753,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 79,
    "outputs": [],
    "source": [
     "n_samples = data.copy()\n",
@@ -769,51 +758,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Test loss: 0.5534095168113708\n",
-      "Test loss: 0.5534094572067261\n",
-      "Predicted: 6.3313093185424805, Expected: 7\n",
-      "Predicted: 5.167182922363281, Expected: 6\n",
-      "Predicted: 5.877106666564941, Expected: 6\n",
-      "Predicted: 6.261582374572754, Expected: 5\n",
-      "Predicted: 6.3313093185424805, Expected: 7\n",
-      "Predicted: 6.239870548248291, Expected: 6\n",
-      "Predicted: 5.633292198181152, Expected: 5\n",
-      "Predicted: 3.877140998840332, Expected: 4\n",
-      "Predicted: 6.3313093185424805, Expected: 6\n",
-      "Predicted: 6.883195877075195, Expected: 6\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mKeyboardInterrupt\u001B[0m                         Traceback (most recent call last)",
-      "\u001B[1;32m<timed exec>\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n",
-      "\u001B[1;32m~\\AppData\\Local\\Temp/ipykernel_3216/1423303215.py\u001B[0m in \u001B[0;36mevaluate_model\u001B[1;34m(model, samples, qualities, epochs, batch_size, metric)\u001B[0m\n\u001B[0;32m     17\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     18\u001B[0m         \u001B[1;32mtry\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m---> 19\u001B[1;33m             history = model.fit(\n\u001B[0m\u001B[0;32m     20\u001B[0m                 \u001B[0msamples_train\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mqualities_train\u001B[0m\u001B[1;33m,\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     21\u001B[0m                 \u001B[0mvalidation_data\u001B[0m\u001B[1;33m=\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0msamples_test\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mqualities_test\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m,\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
-      "\u001B[1;32m~\\Documents\\projects\\rtu-ai\\venv\\lib\\site-packages\\keras\\utils\\traceback_utils.py\u001B[0m in \u001B[0;36merror_handler\u001B[1;34m(*args, **kwargs)\u001B[0m\n\u001B[0;32m     62\u001B[0m     \u001B[0mfiltered_tb\u001B[0m \u001B[1;33m=\u001B[0m \u001B[1;32mNone\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     63\u001B[0m     \u001B[1;32mtry\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m---> 64\u001B[1;33m       \u001B[1;32mreturn\u001B[0m \u001B[0mfn\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m*\u001B[0m\u001B[0margs\u001B[0m\u001B[1;33m,\u001B[0m \u001B[1;33m**\u001B[0m\u001B[0mkwargs\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m     65\u001B[0m     \u001B[1;32mexcept\u001B[0m \u001B[0mException\u001B[0m \u001B[1;32mas\u001B[0m \u001B[0me\u001B[0m\u001B[1;33m:\u001B[0m  \u001B[1;31m# pylint: disable=broad-except\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     66\u001B[0m       \u001B[0mfiltered_tb\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0m_process_traceback_frames\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0me\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0m__traceback__\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
-      "\u001B[1;32m~\\Documents\\projects\\rtu-ai\\venv\\lib\\site-packages\\keras\\engine\\training.py\u001B[0m in \u001B[0;36mfit\u001B[1;34m(self, x, y, batch_size, epochs, verbose, callbacks, validation_split, validation_data, shuffle, class_weight, sample_weight, initial_epoch, steps_per_epoch, validation_steps, validation_batch_size, validation_freq, max_queue_size, workers, use_multiprocessing)\u001B[0m\n\u001B[0;32m   1250\u001B[0m                 \u001B[0mmodel\u001B[0m\u001B[1;33m=\u001B[0m\u001B[0mself\u001B[0m\u001B[1;33m,\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m   1251\u001B[0m                 steps_per_execution=self._steps_per_execution)\n\u001B[1;32m-> 1252\u001B[1;33m           val_logs = self.evaluate(\n\u001B[0m\u001B[0;32m   1253\u001B[0m               \u001B[0mx\u001B[0m\u001B[1;33m=\u001B[0m\u001B[0mval_x\u001B[0m\u001B[1;33m,\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m   1254\u001B[0m               \u001B[0my\u001B[0m\u001B[1;33m=\u001B[0m\u001B[0mval_y\u001B[0m\u001B[1;33m,\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
-      "\u001B[1;32m~\\Documents\\projects\\rtu-ai\\venv\\lib\\site-packages\\keras\\utils\\traceback_utils.py\u001B[0m in \u001B[0;36merror_handler\u001B[1;34m(*args, **kwargs)\u001B[0m\n\u001B[0;32m     62\u001B[0m     \u001B[0mfiltered_tb\u001B[0m \u001B[1;33m=\u001B[0m \u001B[1;32mNone\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     63\u001B[0m     \u001B[1;32mtry\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m---> 64\u001B[1;33m       \u001B[1;32mreturn\u001B[0m \u001B[0mfn\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m*\u001B[0m\u001B[0margs\u001B[0m\u001B[1;33m,\u001B[0m \u001B[1;33m**\u001B[0m\u001B[0mkwargs\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m     65\u001B[0m     \u001B[1;32mexcept\u001B[0m \u001B[0mException\u001B[0m \u001B[1;32mas\u001B[0m \u001B[0me\u001B[0m\u001B[1;33m:\u001B[0m  \u001B[1;31m# pylint: disable=broad-except\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     66\u001B[0m       \u001B[0mfiltered_tb\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0m_process_traceback_frames\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0me\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0m__traceback__\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
-      "\u001B[1;31mKeyboardInterrupt\u001B[0m: "
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "%%time\n",
     "model = build_model(attr_count)\n",
-    "evaluate_model(model, n_samples, n_qualities, batch_size=4, epochs=EPOCHS)"
+    "evaluate_model(model, n_samples, n_qualities, batch_size=1, epochs=20000000)"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   },
