Homework 2. wip. new record >0.5

--- a/homework02.ipynb
+++ b/homework02.ipynb
@@ -938,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 268,
    "outputs": [],
    "source": [
     "classes = {\n",
@@ -953,20 +953,17 @@
     "\n",
     "n_samples = data.copy()\n",
     "\n",
-    "\n",
-    "correlations = n_samples[n_samples.columns].corr(method='pearson')\n",
-    "correlations_abs_sum = correlations[correlations.columns].abs().sum()\n",
-    "\n",
-    "#print(correlations_abs_sum.nsmallest(3))\n",
-    "n_samples = n_samples.drop(['sulphates', 'volatile acidity', 'citric acid', 'free sulfur dioxide'], axis=1)\n",
+    "# n_samples = n_samples.drop(['sulphates', 'volatile acidity', 'citric acid', 'free sulfur dioxide'], axis=1)\n",
     "n_qualities = n_samples.pop('quality')\n",
+    "# n_samples = n_samples.filter(['density'])\n",
     "\n",
     "smote = SMOTE(k_neighbors=4)\n",
     "smote_enn = SMOTEENN(smote=smote, random_state=0)\n",
     "\n",
     "n_samples, n_qualities = smote_enn.fit_resample(n_samples, n_qualities)\n",
+    "\n",
     "n_qualities = n_qualities.map(classes)\n",
-    "n_samples = (n_samples - n_samples.mean()) / n_samples.std()"
+    "# n_samples = (n_samples - n_samples.mean()) / n_samples.std()"
    ],
    "metadata": {
     "collapsed": false,
@@ -977,21 +974,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 272,
    "outputs": [],
    "source": [
     "def build_model(input_count: int, output_count: int):\n",
     "    model = tf.keras.models.Sequential([\n",
     "        tf.keras.layers.Input(input_count),\n",
+    "        tf.keras.layers.Dense(3,\n",
+    "                              kernel_regularizer=tf.keras.regularizers.l2(0.01),\n",
+    "                              activation='sigmoid'),\n",
     "        tf.keras.layers.Dense(output_count,\n",
-    "                              kernel_regularizer=tf.keras.regularizers.l2(0.1),\n",
-    "                              activation='relu'),\n",
-    "        tf.keras.layers.Dense(output_count,\n",
-    "                              kernel_regularizer=tf.keras.regularizers.l2(0.1),\n",
     "                              activation='softmax')\n",
     "    ])\n",
     "\n",
-    "    optimizer = tf.keras.optimizers.Adadelta(learning_rate=0.001)\n",
+    "    optimizer = tf.keras.optimizers.Adam(learning_rate=0.0001)\n",
     "\n",
     "    model.compile(loss='categorical_crossentropy', optimizer=optimizer, metrics=['accuracy'])\n",
     "\n",
@@ -1010,8 +1006,8 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "model = build_model(attr_count-4, len(classes))\n",
-    "evaluate_model(model, n_samples, n_qualities, batch_size=32, epochs=EPOCHS*2)"
+    "model = build_model(attr_count, len(classes))\n",
+    "evaluate_model(model, n_samples, n_qualities, batch_size=64, epochs=EPOCHS*2)"
    ],
    "metadata": {
     "collapsed": false,
