Homework 2. wip. new record >0.6

--- a/homework02.ipynb
+++ b/homework02.ipynb
@@ -974,14 +974,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 277,
    "outputs": [],
    "source": [
     "def build_model(input_count: int, output_count: int):\n",
     "    model = tf.keras.models.Sequential([\n",
     "        tf.keras.layers.Input(input_count),\n",
-    "        tf.keras.layers.Dense(3,\n",
-    "                              kernel_regularizer=tf.keras.regularizers.l2(0.01),\n",
+    "        tf.keras.layers.Dense(input_count,\n",
+    "                              kernel_initializer=tf.keras.initializers.RandomNormal(mean=0.0, stddev=1.0),\n",
+    "                              kernel_regularizer=tf.keras.regularizers.l2(0.001),\n",
+    "                              bias_initializer=tf.keras.initializers.RandomNormal(mean=0.0, stddev=1.0),\n",
+    "                              bias_regularizer=tf.keras.regularizers.l2(0.001),\n",
+    "                              activity_regularizer=tf.keras.regularizers.l2(0.001),\n",
+    "                              activation='sigmoid'),\n",
+    "        tf.keras.layers.Dense(input_count,\n",
+    "                              kernel_initializer=tf.keras.initializers.RandomNormal(mean=0.0, stddev=1.0),\n",
+    "                              kernel_regularizer=tf.keras.regularizers.l2(0.001),\n",
+    "                              bias_initializer=tf.keras.initializers.RandomNormal(mean=0.0, stddev=1.0),\n",
+    "                              bias_regularizer=tf.keras.regularizers.l2(0.001),\n",
+    "                              activity_regularizer=tf.keras.regularizers.l2(0.001),\n",
     "                              activation='sigmoid'),\n",
     "        tf.keras.layers.Dense(output_count,\n",
     "                              activation='softmax')\n",
@@ -1007,13 +1018,27 @@
    "source": [
     "%%time\n",
     "model = build_model(attr_count, len(classes))\n",
-    "evaluate_model(model, n_samples, n_qualities, batch_size=64, epochs=EPOCHS*2)"
+    "evaluate_model(model, n_samples, n_qualities, batch_size=64, epochs=20000000)"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n",
      "is_executing": true
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "kernel_initializer=tf.keras.initializers.RandomNormal(mean=0.0, stddev=1.0),"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
     }
    }
   },
