Formatted Homework 1 and 2

--- a/homework01.ipynb
+++ b/homework01.ipynb
@@ -5,7 +5,49 @@
    "id": "fa8689b0-7cca-4e8a-b816-529b83918af9",
    "metadata": {},
    "source": [
-    "# Oļegs Korsaks, 051RDB146"
+    "<center><img src=\"./images/rtu_logo_lv.png\" alt=\"RTU\" title=\"RTU\" width=\"150em\"/></center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "adca8b28-1ed7-4594-9732-5e5f41ab9752",
+   "metadata": {},
+   "source": [
+    "<center><b>RĪGAS TEHNISKĀ UNIVERSITĀTE</b></center>\n",
+    "<center><b>DATORZINĀTNES UN INFORMĀCIJAS TEHNOLOĢIJAS FAKULTĀTE</b></center>\n",
+    "<center><b>Priekšmeta \"Ievads mākslīgos neironu tīklos\"</b></center><center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b37c4db9-d172-4feb-8398-d7054ab86b06",
+   "metadata": {},
+   "source": [
+    "<center><b>1. mājasdarbs</b></center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2e109eb0-d604-47f1-a23c-07a62ef1ee76",
+   "metadata": {},
+   "source": [
+    "<div style=\"text-align: right\">\n",
+    "    LDsI 12300 Lietišķo datorsistēmu institūts<br>\n",
+    "    RDBD0 Datorsistēmas<br>\n",
+    "    <b>3. kursa 3. grupas</b> pilna laika klātienes <b>students</b><br>\n",
+    "    Oļegs Korsaks<br>\n",
+    "    <b>Studenta apliecības Nr.: </b>051RDB146<br>\n",
+    "</div>\n",
+    "<center><b>Rīga, 2021</b></center>\n",
+    "<div style=\"display:none\">\\pagebreak</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6a6f0e65-71a7-43bd-bbfb-9de9146b989c",
+   "metadata": {},
+   "source": [
+    "***"
    ]
   },
   {
@@ -21,9 +63,7 @@
     "from operator import methodcaller\n",
     "\n",
     "import numpy as np\n",
-    "import tensorflow as tf\n",
-    "\n",
-    "from sklearn.datasets import load_iris"
+    "import tensorflow as tf"
    ]
   },
   {
@@ -171,193 +211,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "993ad7e3-7f77-48ba-a60b-5606a7514fc6",
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    },
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[0.9204139  0.06755938 0.01202674]\n",
-      " [0.915459   0.07146218 0.01307879]\n",
-      " [0.9275438  0.06192729 0.0105289 ]\n",
-      " [0.91499895 0.071821   0.01318   ]\n",
-      " [0.92334116 0.06524835 0.01141051]\n",
-      " [0.8930644  0.08869142 0.01824423]\n",
-      " [0.9232385  0.065335   0.01142646]\n",
-      " [0.91368014 0.07284008 0.01347968]\n",
-      " [0.92136914 0.06682571 0.0118051 ]\n",
-      " [0.9133447  0.07311273 0.0135426 ]\n",
-      " [0.91233665 0.07387634 0.01378708]\n",
-      " [0.9098151  0.07584978 0.0143352 ]\n",
-      " [0.91994435 0.0679449  0.0121107 ]\n",
-      " [0.9418108  0.0504672  0.00772205]\n",
-      " [0.9298346  0.06008018 0.01008524]\n",
-      " [0.9131037  0.07325332 0.01364296]\n",
-      " [0.9227762  0.06568228 0.01154143]\n",
-      " [0.917497   0.06984968 0.01265337]\n",
-      " [0.88866806 0.09202816 0.01930379]\n",
-      " [0.91568035 0.07126424 0.01305551]\n",
-      " [0.8902302  0.09086621 0.01890358]\n",
-      " [0.9108166  0.07505736 0.01412607]\n",
-      " [0.9471329  0.04611335 0.00675379]\n",
-      " [0.88154876 0.09741215 0.02103906]\n",
-      " [0.88436043 0.09530515 0.02033443]\n",
-      " [0.8985608  0.08453838 0.01690084]\n",
-      " [0.8991487  0.08407004 0.01678129]\n",
-      " [0.91215205 0.07402716 0.01382085]\n",
-      " [0.9173516  0.06996723 0.01268107]\n",
-      " [0.907913   0.07733157 0.0147554 ]\n",
-      " [0.90427583 0.08014505 0.01557909]\n",
-      " [0.8998174  0.0835545  0.01662811]\n",
-      " [0.92457134 0.06426357 0.01116498]\n",
-      " [0.9251744  0.0637809  0.01104475]\n",
-      " [0.9101176  0.0756231  0.01425924]\n",
-      " [0.9292721  0.06054976 0.01017817]\n",
-      " [0.9209203  0.06715833 0.01192134]\n",
-      " [0.92733127 0.06208757 0.01058113]\n",
-      " [0.9286859  0.06102408 0.01028997]\n",
-      " [0.9120594  0.0741028  0.01383779]\n",
-      " [0.92516816 0.06380338 0.0110284 ]\n",
-      " [0.9138633  0.07272989 0.01340682]\n",
-      " [0.93131816 0.05891891 0.00976292]\n",
-      " [0.8934752  0.08839308 0.01813175]\n",
-      " [0.87815607 0.09993281 0.02191105]\n",
-      " [0.91393965 0.07264858 0.01341179]\n",
-      " [0.91185695 0.0742487  0.01389432]\n",
-      " [0.9230265  0.06550887 0.01146463]\n",
-      " [0.9139514  0.07261816 0.0134305 ]\n",
-      " [0.9187739  0.06885491 0.01237126]\n",
-      " [0.07953209 0.40041745 0.5200504 ]\n",
-      " [0.10758388 0.415747   0.47666922]\n",
-      " [0.06185118 0.38520122 0.5529476 ]\n",
-      " [0.1931961  0.42892104 0.37788278]\n",
-      " [0.08575025 0.40480202 0.50944763]\n",
-      " [0.12610635 0.42219248 0.45170116]\n",
-      " [0.08771327 0.40578005 0.5065066 ]\n",
-      " [0.447475   0.35750562 0.19501935]\n",
-      " [0.0942288  0.4097103  0.4960609 ]\n",
-      " [0.23847853 0.42426327 0.3372582 ]\n",
-      " [0.35389203 0.3946763  0.25143167]\n",
-      " [0.15647353 0.4274544  0.41607204]\n",
-      " [0.19244848 0.42901385 0.37853768]\n",
-      " [0.09135471 0.40816495 0.50048035]\n",
-      " [0.31177223 0.40759048 0.2806373 ]\n",
-      " [0.11348937 0.41802412 0.46848652]\n",
-      " [0.12370357 0.42140225 0.45489413]\n",
-      " [0.20541756 0.42812407 0.3664584 ]\n",
-      " [0.08788081 0.40642422 0.5056949 ]\n",
-      " [0.2373214  0.4245563  0.33812234]\n",
-      " [0.07733493 0.39882174 0.5238432 ]\n",
-      " [0.19004965 0.42873746 0.38121286]\n",
-      " [0.06141727 0.38508147 0.55350125]\n",
-      " [0.09779526 0.41166335 0.49054146]\n",
-      " [0.13451864 0.4240838  0.4413976 ]\n",
-      " [0.11334809 0.4180306  0.46862134]\n",
-      " [0.06815664 0.3914683  0.54037505]\n",
-      " [0.05222947 0.37411594 0.57365453]\n",
-      " [0.10975753 0.41678432 0.47345823]\n",
-      " [0.3496008  0.3958732  0.25452602]\n",
-      " [0.2598352  0.420616   0.31954885]\n",
-      " [0.29542953 0.41235635 0.29221407]\n",
-      " [0.22805278 0.42574888 0.34619832]\n",
-      " [0.05402116 0.3766004  0.56937844]\n",
-      " [0.12967783 0.42298794 0.44733426]\n",
-      " [0.11869112 0.41965318 0.4616557 ]\n",
-      " [0.07951003 0.40045252 0.5200375 ]\n",
-      " [0.10706101 0.41601318 0.47692582]\n",
-      " [0.2021637  0.42816156 0.36967483]\n",
-      " [0.20250754 0.4283662  0.36912623]\n",
-      " [0.14585476 0.42641005 0.42773518]\n",
-      " [0.10384712 0.41432983 0.48182306]\n",
-      " [0.20257226 0.42831266 0.36911508]\n",
-      " [0.4332934  0.36370513 0.2030014 ]\n",
-      " [0.17063113 0.4286872  0.40068164]\n",
-      " [0.18739372 0.428773   0.3838333 ]\n",
-      " [0.17500463 0.428739   0.3962564 ]\n",
-      " [0.14097734 0.42536852 0.43365416]\n",
-      " [0.51781064 0.32427368 0.15791565]\n",
-      " [0.18857302 0.4288134  0.38261357]\n",
-      " [0.01763232 0.2971169  0.6852508 ]\n",
-      " [0.04943047 0.37056276 0.5800067 ]\n",
-      " [0.01797767 0.2986204  0.6834019 ]\n",
-      " [0.0300538  0.33546582 0.6344804 ]\n",
-      " [0.02108816 0.3099591  0.6689527 ]\n",
-      " [0.00990724 0.2577382  0.7323545 ]\n",
-      " [0.11748306 0.4197708  0.46274617]\n",
-      " [0.01386525 0.28058043 0.70555437]\n",
-      " [0.02134199 0.3110771  0.6675809 ]\n",
-      " [0.01466852 0.28409    0.70124143]\n",
-      " [0.0454402  0.3644818  0.590078  ]\n",
-      " [0.03564053 0.3476858  0.61667365]\n",
-      " [0.02680393 0.32710946 0.6460865 ]\n",
-      " [0.05089872 0.3726198  0.57648146]\n",
-      " [0.04059903 0.35677695 0.60262406]\n",
-      " [0.03369087 0.34337595 0.62293315]\n",
-      " [0.03229296 0.34054756 0.6271595 ]\n",
-      " [0.01006123 0.2584818  0.73145694]\n",
-      " [0.0072709  0.23775886 0.75497025]\n",
-      " [0.05534741 0.37846017 0.5661924 ]\n",
-      " [0.02128127 0.31047773 0.66824096]\n",
-      " [0.06192134 0.38541064 0.552668  ]\n",
-      " [0.00913865 0.25249425 0.73836714]\n",
-      " [0.05626304 0.37921348 0.56452346]\n",
-      " [0.02443578 0.32037273 0.6551915 ]\n",
-      " [0.01888774 0.3020933  0.679019  ]\n",
-      " [0.06528018 0.38874623 0.5459736 ]\n",
-      " [0.06341294 0.38683692 0.5497501 ]\n",
-      " [0.02550236 0.323655   0.65084267]\n",
-      " [0.02315935 0.31672552 0.6601151 ]\n",
-      " [0.01503895 0.28621268 0.69874835]\n",
-      " [0.01276547 0.27452254 0.712712  ]\n",
-      " [0.02450916 0.32078564 0.65470517]\n",
-      " [0.05403316 0.37656668 0.56940013]\n",
-      " [0.03467377 0.3459216  0.6194046 ]\n",
-      " [0.0129356  0.27565068 0.71141374]\n",
-      " [0.02624145 0.32540247 0.648356  ]\n",
-      " [0.0337429  0.34364906 0.62260807]\n",
-      " [0.07187738 0.39458844 0.5335342 ]\n",
-      " [0.02936251 0.33359364 0.6370438 ]\n",
-      " [0.02272304 0.3151856  0.6620914 ]\n",
-      " [0.03566624 0.3474252  0.61690855]\n",
-      " [0.04943047 0.37056276 0.5800067 ]\n",
-      " [0.01837477 0.30006772 0.6815575 ]\n",
-      " [0.02092199 0.30919856 0.6698795 ]\n",
-      " [0.033148   0.34227398 0.62457794]\n",
-      " [0.04643287 0.36632118 0.587246  ]\n",
-      " [0.03935609 0.35453996 0.606104  ]\n",
-      " [0.03351405 0.34293592 0.62355006]\n",
-      " [0.05430705 0.37677693 0.568916  ]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "iris = load_iris()\n",
-    "model = tf.keras.models.Sequential()\n",
-    "model.add(tf.keras.layers.Dense(4, kernel_regularizer=tf.keras.regularizers.l2(0.1), activation='sigmoid', input_shape=(4, )))\n",
-    "model.add(tf.keras.layers.Dense(3, activation='softmax'))\n",
-    "model.compile(optimizer='adam', loss='binary_crossentropy')\n",
-    "\n",
-    "targets = np.zeros((len(iris.target), 3))\n",
-    "\n",
-    "for ti, iris_target in enumerate(iris.target):\n",
-    "    targets[ti][iris_target] = 1\n",
-    "\n",
-    "model.fit(iris.data, targets, epochs=1000, verbose=0)\n",
-    "predictions = model.predict(iris.data)\n",
-    "\n",
-    "print(predictions)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "c70d54bc-cabe-44b8-8709-a5891a41d16f",
    "metadata": {},
@@ -375,13 +228,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "a8d6dbd1-d88f-4d7c-ac35-b49a61c0cb4c",
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -426,13 +275,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "406fb981-3022-4c89-b99c-4e8e14462034",
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    },
     "tags": []
    },
    "outputs": [
@@ -491,14 +336,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "bd882d44-ab8b-4bb4-97d9-04f1fc4042ab",
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -528,18 +368,18 @@
       " [0 0 0 1]\n",
       " [0 0 0 1]\n",
       " [0 0 0 1]]\n",
-      "[[0.40122816 0.27044576 0.27229726 0.05602879]\n",
-      " [0.3218913  0.33545253 0.24915652 0.09349957]\n",
-      " [0.3813687  0.30198744 0.25019044 0.0664534 ]\n",
-      " [0.38808408 0.33379495 0.21402305 0.06409793]\n",
-      " [0.28799808 0.33435825 0.2553881  0.12225551]\n",
-      " [0.32503438 0.35284585 0.23231284 0.08980686]\n",
-      " [0.33067662 0.28039443 0.31060755 0.07832137]\n",
-      " [0.3395056  0.2619369  0.33114058 0.06741691]\n",
-      " [0.0762201  0.15722476 0.28797558 0.47857964]\n",
-      " [0.0646231  0.14966469 0.24060789 0.5451044 ]\n",
-      " [0.04386616 0.11554809 0.19807024 0.64251554]\n",
-      " [0.0298201  0.09273374 0.16488518 0.71256095]]\n"
+      "[[0.4057499  0.2425949  0.2663701  0.08528512]\n",
+      " [0.30167082 0.33106974 0.24818288 0.11907658]\n",
+      " [0.37733    0.2791558  0.24807459 0.09543963]\n",
+      " [0.36596152 0.3197736  0.21923439 0.09503048]\n",
+      " [0.2787835  0.32859215 0.24841893 0.14420544]\n",
+      " [0.2959681  0.35381326 0.2363469  0.11387179]\n",
+      " [0.32631972 0.27099514 0.30222756 0.10045753]\n",
+      " [0.33388078 0.25433013 0.3253257  0.08646336]\n",
+      " [0.0913469  0.1572321  0.279085   0.47233593]\n",
+      " [0.08640224 0.15662202 0.23808245 0.51889324]\n",
+      " [0.07208201 0.13494064 0.20582598 0.58715135]\n",
+      " [0.0515318  0.11512755 0.18218212 0.6511586 ]]\n"
      ]
     }
    ],
@@ -565,41 +405,38 @@
    "id": "7f4fe82a-f35c-4504-9290-bfd4544ac7f8",
    "metadata": {},
    "source": [
-    "**Interesanti**, bet TensorFlow versija apstiprināja manas šaubas par \"I\" un \"!\" lidzīguma problēmu, kāmēr bez TensorFlow klasifikācija nostrādāja pareizi. Ar parējiem burtiem arī ir redzamas problēmas - B tiek pieskaitīts pie 2. klases. Pārbaudīšu, vai epohu skaits uzlabos situāciju:"
+    "**Interesanti**, bet TensorFlow versija apstiprināja manas šaubas par \"I\" un \"!\" lidzīguma problēmu, kāmēr bez TensorFlow klasifikācija nostrādāja pareizi. Ar parējiem burtiem arī ir redzamas problēmas - B tiek pieskaitīts pie 2. klases. Vispirms domāju, ka epohu skaits ir pie vainas, bet, darot 2. mājasdarbu, ieguvu nedaudz pieredzes un sapratu, ka pēc noklusējuma TensorFlow izmanto batch_size=32, bet oriģinālais modelis strādā batch_size=1 režīmā. Pārbaudīsim:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "fdb23df4-6655-4f33-bcde-4922a2c91ddb",
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
+    "tags": []
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[9.5445937e-01 4.3652891e-03 4.0330362e-02 8.4496563e-04]\n",
-      " [7.2989631e-01 2.2257757e-01 4.1493177e-02 6.0328790e-03]\n",
-      " [8.2664573e-01 1.2553719e-01 4.2144276e-02 5.6728711e-03]\n",
-      " [1.4880331e-01 8.4769565e-01 6.0119445e-04 2.8998198e-03]\n",
-      " [1.5680043e-01 8.0118918e-01 2.2088222e-02 1.9922161e-02]\n",
-      " [4.3666609e-02 9.4789302e-01 2.4487793e-03 5.9915907e-03]\n",
-      " [8.4991813e-02 1.3039259e-03 9.1236556e-01 1.3388292e-03]\n",
-      " [5.0192457e-02 8.0565619e-04 9.4769442e-01 1.3074677e-03]\n",
-      " [1.1133432e-02 1.4172719e-03 8.9987338e-01 8.7575883e-02]\n",
-      " [8.3672600e-03 1.4911260e-02 7.1887158e-02 9.0483433e-01]\n",
-      " [8.3632040e-04 1.0093537e-02 1.6791027e-02 9.7227907e-01]\n",
-      " [7.0124064e-05 6.3012759e-03 4.6660425e-03 9.8896259e-01]]\n"
+      "[[0.46556696 0.20971623 0.28771672 0.03700005]\n",
+      " [0.3171911  0.41533726 0.21253535 0.05493634]\n",
+      " [0.4245003  0.29753134 0.23495908 0.0430093 ]\n",
+      " [0.39692888 0.41605994 0.15271471 0.03429645]\n",
+      " [0.2911333  0.41151187 0.21722504 0.08012976]\n",
+      " [0.29453287 0.4920148  0.16841164 0.04504079]\n",
+      " [0.32661724 0.2329083  0.38682872 0.05364579]\n",
+      " [0.31730422 0.19451658 0.44316012 0.04501912]\n",
+      " [0.0874395  0.10797236 0.3486351  0.45595306]\n",
+      " [0.0668207  0.09721947 0.22486073 0.6110991 ]\n",
+      " [0.03653334 0.05261028 0.14601709 0.76483935]\n",
+      " [0.02317738 0.04201355 0.11418518 0.82062393]]\n"
      ]
     }
    ],
    "source": [
-    "model.fit(np_letters, targets, epochs=10000, verbose=0)\n",
+    "model.fit(np_letters, targets, batch_size=1, epochs=1000, verbose=0)\n",
     "predictions = model.predict(np_letters)\n",
     "\n",
     "print(predictions)"
@@ -607,13 +444,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1bbf6119-676a-4a21-a1ef-0d9cb2a6fc1e",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
-   "source": []
+   "id": "083eebf9-bff8-4280-90d3-31565ae46c8b",
+   "metadata": {},
+   "source": [
+    "Tagad sakrīt."
+   ]
   }
  ],
  "metadata": {
@@ -632,7 +467,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.9.9"
   }
  },
  "nbformat": 4,
